--- a/public/html/index.html
+++ b/public/html/index.html
@@ -152,8 +152,7 @@
   firebase.initializeApp(config);
 </script>
   <script src="https://www.gstatic.com/firebasejs/3.7.0/firebase.js"></script>
-  <script src="../js/Database.min.js"></script>
-  <script src="../js/Index.min.js"></script>
+  <script src="../js/Index.js"></script>
   <script src="../js/Display.min.js"></script>
   <script src="../js/Search.min.js"></script>
   <!--<script src="../js/YugiohDex.min.js"></script>-->
